@startuml "Class Diagram"

class User <<Entity>> {
  + name : String
  + username : String
  + location : String
  + website : String
  + mail : String
  + profilePhoto : String
  + backgroundPhoto : String
  + bio : String
  + birth : Number
  + createdAt : Date
  + followers : [User]
  + following : [User]
  + directMessages : [Message]
  + tweets : [Tweet]
  + likedTweet : [Tweet]
  + pinnedTweet : [Tweet]
  + notifications : [Notification]

  + follow()
  + tweet()
  + retweet()
  + like()
  + reply()
  + pinTweet()
  + sendDirectMessage()
}

class Tweet <<Entity>> {
  + user : User
  + text : String
  + createDate : String
  + likedBy : [User]
  + retweets : [User]
  + replies : [Tweet]
}

Class Notification <<Entity>>  {
  + userTags : [User]
  + mentions : [User]
  + retweetBy : [User]
  + likes : [User]
  + messages : [User]
  + follows : [User]
}

class Message <<Entity>> {
  + message : String
  + creatDate : Date
  + user : [user]
}


User *-- Tweet
User *-- Notification
User *-- Hashtag
User *-- Messages

@enduml
